알림페이지 , join.jsp 다수 수정

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -145,7 +145,7 @@ nav{
     font-weight: 600;
     border-radius: 3px;
 }
-.join_btn{
+.join_btn, .change_btn{
     color: #ffffff;
     width: 100px;
     background-color: #1F8CE6;
@@ -154,6 +154,12 @@ nav{
     font-size: .90em;
     font-weight: 600;
     border-radius: 3px;
+}
+
+.btn_flex{
+    display: flex;
+    font-size: 0.9em;
+    justify-content: center;
 }
 /* 유저 버튼 */
 /* 메인 메뉴 */
